# OpenGL

./: buildpro.sh  main.cpp
openglShader/: CMakeLists.txt  fs.fs  main.cpp  vs.vs
shaders/: cube.vs  lighting.fs  lighting.vs
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
